--- a/desktop_app/src/Global.css
+++ b/desktop_app/src/Global.css
@@ -106,7 +106,6 @@
   animation-timing-function: ease-in-out;
 }
 
-
 .tabs {
   position: relative;
 }
@@ -123,4 +122,32 @@
 .animate-color-transition {
   transition: background-color 0.3s ease;
   color: rgb(39 39 42);
+}
+
+.btn-warning {
+  position: relative;
+  overflow: hidden;
+  transition: 0.3s ease-in-out;
+}
+
+.btn-warning::after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #f85656;
+  opacity: 0;
+  transition: 0.3s ease-in-out;
+}
+
+.btn-warning:hover {
+  padding-right: 138px;
+  padding-left: 138px;
+  background-color: #f85656;
+  transition: 0.3s ease-in-out;
+}
+
+.btn-warning:hover::after {
+  opacity: 1;
 }
