--- a/desktop_app/src/components/Dashboard/Tabs/Clases/testeo/style.css
+++ b/desktop_app/src/components/Dashboard/Tabs/Clases/testeo/style.css
@@ -1,50 +1,5 @@
 .carousel__item {
   animation: carousel-animate-vertical 6s linear;
-  animation-play-state: paused;
-}
-.carousel__item.running {
-  animation-play-state: running;
-}
-
-
-.carousel__item:nth-child(1) {
-  animation-delay: calc(3s * -1);
-}
-
-.carousel__item:nth-child(2) {
-  animation-delay: calc(3s * 0);
-}
-
-.carousel__item:nth-child(3) {
-  animation-delay: calc(3s * 1);
-}
-
-.carousel__item:nth-child(4) {
-  animation-delay: calc(3s * 2);
-}
-
-.carousel__item:nth-child(5) {
-  animation-delay: calc(3s * 3);
-}
-
-.carousel__item:nth-child(6) {
-  animation-delay: calc(3s * 4);
-}
-
-.carousel__item:nth-child(7) {
-  animation-delay: calc(3s * 5);
-}
-
-.carousel__item:nth-child(8) {
-  animation-delay: calc(3s * 6);
-}
-
-.carousel__item:nth-child(9) {
-  animation-delay: calc(3s * 7);
-}
-
-.carousel__item:last-child {
-  animation-delay: calc(-3s * 2);
 }
 
 .carousel__item-head {
@@ -78,36 +33,35 @@
   margin-right: auto;
 }
 
-
 @keyframes carousel-animate-vertical {
-  0% {
-    transform: translateY(100%) scale(0.5);
-    opacity: 0;
-    visibility: hidden;
-  }
-  4%, 20% {
-    transform: translateY(100%) scale(0.7);
-    opacity: 0;
-    visibility: visible;
-  }
+  /*0% {*/
+  /*  transform: translateY(100%) scale(0.5);*/
+  /*  opacity: 0;*/
+  /*  visibility: hidden;*/
+  /*}*/
+  /*4%, 20% {*/
+  /*  transform: translateY(100%) scale(0.7);*/
+  /*  opacity: 0;*/
+  /*  visibility: visible;*/
+  /*}*/
   26%, 52% {
     transform: translateY(0) scale(1);
     opacity: 1;
     visibility: visible;
   }
-  56%, 82% {
-    transform: translateY(-100%) scale(0.7);
-    opacity: 0;
-    visibility: visible;
-  }
-  86% {
-    transform: translateY(-100%) scale(0.5);
-    opacity: 0;
-    visibility: visible;
-  }
-  100% {
-    transform: translateY(-100%) scale(0.5);
-    opacity: 0;
-    visibility: hidden;
-  }
+  /*56%, 82% {*/
+  /*  transform: translateY(-100%) scale(0.7);*/
+  /*  opacity: 0;*/
+  /*  visibility: visible;*/
+  /*}*/
+  /*86% {*/
+  /*  transform: translateY(-100%) scale(0.5);*/
+  /*  opacity: 0;*/
+  /*  visibility: visible;*/
+  /*}*/
+  /*100% {*/
+  /*  transform: translateY(-100%) scale(0.5);*/
+  /*  opacity: 0;*/
+  /*  visibility: hidden;*/
+  /*}*/
 }
