--- a/desktop_app/src/components/Dashboard/Tabs/Clases/testeo/style.css
+++ b/desktop_app/src/components/Dashboard/Tabs/Clases/testeo/style.css
@@ -1,35 +1,35 @@
 .carousel__item {
   animation: carousel-animate-vertical 6s linear paused;
 }
-
 .carousel__item-head {
-  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.8);
-  border-radius: 50%;
-  background-color: #ffffff;
-  width: 90px;
-  height: 90px;
-  padding: 14px;
-  position: relative;
-  margin-right: -45px;
-  flex-shrink: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 50px;
-  color: #000;
+  @apply
+  flex
+  relative
+  drop-shadow-[2px_2px_10px_rgba(0,0,0,0.8)]
+  rounded-[50%] bg-white w-[90px] h-[90px] p-[14px] mr-[-45px] flex-shrink-0
+  items-center
+  justify-center
+  text-[50px]
+  text-black
+
 }
 
 .carousel__item-body {
-  width: 100%;
-  background-color: #fff;
-  border-radius: 8px;
-  padding: 16px 20px 16px 20px;
+  @apply
+  w-[100%]
+  bg-white
+  rounded-[8px]
+  pt-[16px]
+  pr-[20px]
+  pb-[16px]
+  pl-[20px]
 }
 
 .letter_image {
-  width: 100%;
-  margin-left: auto;
-  margin-right: auto;
+  @apply
+  w-[100%]
+  ml-auto
+  mr-auto
 }
 
 @keyframes carousel-animate-vertical {
